/othervm --enable-native-access=ALL-UNNAMED
Co-authored-by: Jorn Vernee <JornVernee@users.noreply.github.com>